--- a/Reservia.html
+++ b/Reservia.html
@@ -12,6 +12,7 @@
 		<div id="Page_Complete">
 
 			<header>
+
 				<div id="Logo">
 					<img src="C:/Users/User/Documents/Git/Reservia/Reservia/Reservia.png" alt="Logo_Reservia">
 				</div>
@@ -25,13 +26,32 @@
 						</ul>
 					</nav>
 				</div>
+
 			</header>
 
 
+
 			<main>
+
 				<section>
 					<h1>Trouvez votre hébergement pour des vacanses de rêve</h1>
 					<p>En plein centre ville ou ou en pleine nature</p>
+
+					<div id="Formulaire">
+						<form method="post" action="traitement.php">
+							<p>
+								<label for="Localisation"><i class="fas fa-map-marker-alt"></i></label>
+								<input type="text" name="Localisation" id="Localisation" />
+								<input type="submit" name="Rechercher" value="Rechercher" />
+							</p>
+						</form>
+					</div>
+
+					<p>Filtres</p>
+
+
+
+
 				</section>
 
 
