Header/Section1/Section2 Faite HTML

--- a/Reservia.html
+++ b/Reservia.html
@@ -12,7 +12,6 @@
 		<div id="Page_Complete">
 
 			<header>
-
 				<div id="Logo">
 					<img src="C:/Users/User/Documents/Git/Reservia/Reservia/Reservia.png" alt="Logo_Reservia">
 				</div>
@@ -26,14 +25,12 @@
 						</ul>
 					</nav>
 				</div>
-
 			</header>
 
 
 
 			<main>
-
-				<section>
+				<section id="Section1">
 					<h1>Trouvez votre hébergement pour des vacanses de rêve</h1>
 					<p>En plein centre ville ou ou en pleine nature</p>
 
@@ -49,18 +46,84 @@
 
 					<p>Filtres</p>
 
+					<div id="Economique">
+						<p>Economique</p>	
+					</div>
+
+					<div id="Familial">
+						<p>Familial</p>
+					</div>
+
+					<div id="Romantique">
+						<p>Romantique</p>
+					</div>
+
+					<div id="Animaux">
+						<p>Animaux autorisés</p>
+					</div>
+
+					<p><i class="fas fa-info"></i>Plus de 500 logements sont disponibles dans cette ville</p>
+				</section>
 
 
+				<section id="Section2">
+					<h2>Hergements à Marseille</h2>
 
+					<div id="Hebergement1">
+						<div id="Figure1">
+							<figure>
+								<img src="C:/Users/User/Documents/Git/Reservia/Reservia/photo1hebergement.jpg" alt="#" />
+								<figcaption>Auberge la Cannebière</figcaption>
+								<figcaption>Nuit à partir de 25€</figcaption>
+							</figure>
+						</div>
+
+						<div id="Figure2">
+							<figure>
+								<img src="C:/Users/User/Documents/Git/Reservia/Reservia/photo2hebergement.jpg" alt="#" />
+								<figcaption>Hôtel du port</figcaption>
+								<figcaption>Nuit à partir de 52€</figcaption>
+							</figure>
+						</div>
+
+						<div id="Figure3">
+							<figure>
+								<img src="C:/Users/User/Documents/Git/Reservia/Reservia/photo3hebergement.jpg" alt="#" />
+								<figcaption>Hôtel les mouettes</figcaption>
+								<figcaption>Nuit à partir de 76€</figcaption>
+							</figure>
+						</div>
+					</div>
+
+					<div id="Hebergement2">
+						<div id="Figure4">
+							<figure>
+								<img src="C:/Users/User/Documents/Git/Reservia/Reservia/photo4hebergement.jpg" alt="#" />
+								<figcaption>Hôtel de la mer</figcaption>
+								<figcaption>Nuit à partir de 46€</figcaption>
+							</figure>
+						</div>
+
+						<div id="Figure5">
+							<figure>
+								<img src="C:/Users/User/Documents/Git/Reservia/Reservia/photo5hebergement.jpg" alt="#" />
+								<figcaption>Auberge le panier</figcaption>
+								<figcaption>Nuit à partir de 23€</figcaption>
+							</figure>
+						</div>
+
+						<div id="Figure6">
+							<figure>
+								<img src="C:/Users/User/Documents/Git/Reservia/Reservia/photo6hebergement.jpg" alt="#" />
+								<figcaption>Hôtel chez Amina</figcaption>
+								<figcaption>Nuit à partir de 96€</figcaption>
+							</figure>
+						</div>
+					</div>
 				</section>
 
 
 
-
-
-				<section>
-					
-				</section>
 
 
 
