--- a/Reservia.html
+++ b/Reservia.html
@@ -120,16 +120,43 @@
 							</figure>
 						</div>
 					</div>
+					<p>Afficher plus</p>
 				</section>
 
 
+				<aside id="Aside">
+					<h2>Les Plus Populaires<i class="fas fa-chart-line"></i></h2>
+
+					<div id="Populaire1">
+						<figure>
+							<img src="C:/Users/User/Documents/Git/Reservia/Reservia/populaire1.jpg" alt="#" />
+							<figcaption>Hôtel le soleil du matin</figcaption>
+							<figcaption>Nuit à partir de 128€</figcaption>
+						</figure>
+					</div>
+
+					<div id="Populaire2">
+						<figure>
+							<img src="C:/Users/User/Documents/Git/Reservia/Reservia/populaire2.jpg" alt="#" />
+							<figcaption>Au coeur de l'eau Chambres d'hôtes</figcaption>
+							<figcaption>Nuit à partir de 71€</figcaption>
+						</figure>
+					</div>
+
+					<div id="Populaire3">
+						<figure>
+							<img src="C:/Users/User/Documents/Git/Reservia/Reservia/populaire3.jpg" alt="#" />
+							<figcaption>Hôtel Tout bleu et Blanc</figcaption>
+							<figcaption>Nuit à partir de 68€</figcaption>
+						</figure>
+					</div>
 
 
 
 
-				<aside>
-					
 				</aside>
+
+
 
 
 
