Footer Fini HTML

--- a/Reservia.html
+++ b/Reservia.html
@@ -153,7 +153,6 @@
 				</aside>
 
 
-
 				<section id="Section3">
 					<h2>Activités à Marseille</h2>
 
@@ -202,22 +201,26 @@
 			</main>
 
 
-
 			<footer>
+				<div id="A_propos">
+					<h3>A Propos</h3>
+					<p>Fontionnement du site</p>
+					<p>Conditions générale de ventes</p>
+					<p>Données et confidentialité</p>
+				</div>
 
+				<div id="Nos_Hebergements">
+					<h3>Nos Hebergements</h3>
+					<p>Charte qualité</p>
+					<p>Soumettre votre hôtel</p>
+				</div>
 
-
-
-
-
-
+				<div id="Assistance">
+					<h3>Assistance</h3>
+					<p>Centre d'aide</p>
+					<p>Nous contacter</p>
+				</div>
 			</footer>
-
-
-
-
-
-
 		</div>
 	</body>
 </html>
