Réalisation du CSS Formulaire

--- a/Reservia.html
+++ b/Reservia.html
@@ -12,7 +12,7 @@
 		<div id="Page_Complete">
 
 			<header>
-				<div id="Logo">
+				<div>
 					<img src="C:/Users/User/Documents/Git/Reservia/Reservia/Reservia.png" alt="Logo_Reservia">
 				</div>
 
@@ -35,11 +35,11 @@
 					<p>En plein centre ville ou ou en pleine nature</p>
 
 					<div id="Formulaire">
-						<form method="post" action="traitement.php">
+						<form method="post" action="traitement.php" id="Form">
 							<p>
 								<label for="Localisation"><i class="fas fa-map-marker-alt"></i></label>
 								<input type="text" name="Localisation" id="Localisation" />
-								<input type="submit" name="Rechercher" value="Rechercher" />
+								<input type="submit" name="Rechercher" value="Rechercher" id="Recherche_bouton" />
 							</p>
 						</form>
 					</div>
