Ajout de la .classe pour Filtre CSS

--- a/Reservia.html
+++ b/Reservia.html
@@ -30,11 +30,11 @@
 
 
 			<main>
-				<section id="Section1">
+				<section>
 					<h1>Trouvez votre hébergement pour des vacanses de rêve</h1>
 					<p>En plein centre ville ou ou en pleine nature</p>
 
-					<div id="Formulaire">
+					<div>
 						<form method="post" action="traitement.php" id="Form">
 							<p>
 								<label for="Localisation"><i class="fas fa-map-marker-alt"></i></label>
@@ -44,22 +44,24 @@
 						</form>
 					</div>
 
-					<p>Filtres</p>
+					<div id="Filtres">
+						<p>Filtres</p>
 
-					<div id="Economique">
-						<p>Economique</p>	
-					</div>
+						<div class="classe_filtre">
+							<p><i class="fas fa-money-bill-wave"></i>Economique</p>	
+						</div>
 
-					<div id="Familial">
-						<p>Familial</p>
-					</div>
+						<div class="classe_filtre">
+							<p><i class="fas fa-child"></i>Familial</p>
+						</div>
 
-					<div id="Romantique">
-						<p>Romantique</p>
-					</div>
+						<div class="classe_filtre">
+							<p><i class="fas fa-heart"></i>Romantique</p>
+						</div>
 
-					<div id="Animaux">
-						<p>Animaux autorisés</p>
+						<div class="classe_filtre">
+							<p><i class="fas fa-dog"></i>Animaux autorisés</p>
+						</div>
 					</div>
 
 					<p><i class="fas fa-info"></i>Plus de 500 logements sont disponibles dans cette ville</p>
