--- a/Reservia.html
+++ b/Reservia.html
@@ -30,7 +30,7 @@
 
 
 			<main>
-				<section>
+				<section id="Section1">
 					<h1>Trouvez votre hébergement pour des vacanses de rêve</h1>
 					<p>En plein centre ville ou ou en pleine nature</p>
 
@@ -69,7 +69,7 @@
 
 
 				<section id="Section2">
-					<h2>Hergements à Marseille</h2>
+					<h2>Hébergements à Marseille</h2>
 
 					<div id="Hebergement1">
 						<div id="Figure1">
