--- a/Reservia.html
+++ b/Reservia.html
@@ -47,24 +47,38 @@
 					<div id="Filtres">
 						<p>Filtres</p>
 
-						<div class="classe_filtre">
-							<p><i class="fas fa-money-bill-wave"></i>Economique</p>	
+						<div class="Filter">
+							<i class="fas fa-money-bill-wave"></i>
+							<div class="filter_text">
+								Economique
+							</div>	
 						</div>
 
-						<div class="classe_filtre">
-							<p><i class="fas fa-child"></i>Familial</p>
+						<div class="Filter">
+							<i class="fas fa-child"></i>
+							<div class="filter_text">
+								Familial
+							</div>	
 						</div>
 
-						<div class="classe_filtre">
-							<p><i class="fas fa-heart"></i>Romantique</p>
+						<div class="Filter">
+							<i class="fas fa-heart"></i>
+							<div class="filter_text">
+								Romantique
+							</div>	
 						</div>
 
-						<div class="classe_filtre">
-							<p><i class="fas fa-dog"></i>Animaux autorisés</p>
+						<div class="Filter">
+							<i class="fas fa-dog"></i>
+							<div class="filter_text">
+								Animaux autorisés
+							</div>	
 						</div>
 					</div>
 
-					<p><i class="fas fa-info"></i>Plus de 500 logements sont disponibles dans cette ville</p>
+					<div id="Logement">
+						<i class="fas fa-info"></i><p>Plus de 500 logements sont disponibles dans cette ville</p>
+					</div>
 				</section>
 
 
