HEADER fini en global manque Font-size/ancre/hover-filtre

--- a/Reservia.html
+++ b/Reservia.html
@@ -91,6 +91,7 @@
 								<img src="C:/Users/User/Documents/Git/Reservia/Reservia/photo1hebergement.jpg" alt="#" />
 								<figcaption>Auberge la Cannebière</figcaption>
 								<figcaption>Nuit à partir de 25€</figcaption>
+								<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
 							</figure>
 						</div>
 
@@ -99,6 +100,7 @@
 								<img src="C:/Users/User/Documents/Git/Reservia/Reservia/photo2hebergement.jpg" alt="#" />
 								<figcaption>Hôtel du port</figcaption>
 								<figcaption>Nuit à partir de 52€</figcaption>
+								<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
 							</figure>
 						</div>
 
@@ -107,6 +109,7 @@
 								<img src="C:/Users/User/Documents/Git/Reservia/Reservia/photo3hebergement.jpg" alt="#" />
 								<figcaption>Hôtel les mouettes</figcaption>
 								<figcaption>Nuit à partir de 76€</figcaption>
+								<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
 							</figure>
 						</div>
 					</div>
@@ -117,6 +120,7 @@
 								<img src="C:/Users/User/Documents/Git/Reservia/Reservia/photo4hebergement.jpg" alt="#" />
 								<figcaption>Hôtel de la mer</figcaption>
 								<figcaption>Nuit à partir de 46€</figcaption>
+								<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
 							</figure>
 						</div>
 
@@ -125,6 +129,7 @@
 								<img src="C:/Users/User/Documents/Git/Reservia/Reservia/photo5hebergement.jpg" alt="#" />
 								<figcaption>Auberge le panier</figcaption>
 								<figcaption>Nuit à partir de 23€</figcaption>
+								<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
 							</figure>
 						</div>
 
@@ -133,6 +138,7 @@
 								<img src="C:/Users/User/Documents/Git/Reservia/Reservia/photo6hebergement.jpg" alt="#" />
 								<figcaption>Hôtel chez Amina</figcaption>
 								<figcaption>Nuit à partir de 96€</figcaption>
+								<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
 							</figure>
 						</div>
 					</div>
@@ -148,6 +154,7 @@
 							<img src="C:/Users/User/Documents/Git/Reservia/Reservia/populaire1.jpg" alt="#" />
 							<figcaption>Hôtel le soleil du matin</figcaption>
 							<figcaption>Nuit à partir de 128€</figcaption>
+							<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
 						</figure>
 					</div>
 
@@ -156,6 +163,7 @@
 							<img src="C:/Users/User/Documents/Git/Reservia/Reservia/populaire2.jpg" alt="#" />
 							<figcaption>Au coeur de l'eau Chambres d'hôtes</figcaption>
 							<figcaption>Nuit à partir de 71€</figcaption>
+							<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
 						</figure>
 					</div>
 
@@ -164,6 +172,7 @@
 							<img src="C:/Users/User/Documents/Git/Reservia/Reservia/populaire3.jpg" alt="#" />
 							<figcaption>Hôtel Tout bleu et Blanc</figcaption>
 							<figcaption>Nuit à partir de 68€</figcaption>
+							<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
 						</figure>
 					</div>
 				</aside>
