Réalisation et placement des sections CSS/ Ajout classe HTML

--- a/Reservia.html
+++ b/Reservia.html
@@ -86,7 +86,7 @@
 					<h2>Hébergements à Marseille</h2>
 
 					<div id="Hebergement1">
-						<div id="Figure1">
+						<div class="photo">
 							<figure>
 								<img src="C:/Users/User/Documents/Git/Reservia/Reservia/photo1hebergement.jpg" alt="#" />
 								<figcaption>Auberge la Cannebière</figcaption>
@@ -95,7 +95,7 @@
 							</figure>
 						</div>
 
-						<div id="Figure2">
+						<div class="photo">
 							<figure>
 								<img src="C:/Users/User/Documents/Git/Reservia/Reservia/photo2hebergement.jpg" alt="#" />
 								<figcaption>Hôtel du port</figcaption>
@@ -104,7 +104,7 @@
 							</figure>
 						</div>
 
-						<div id="Figure3">
+						<div class="photo">
 							<figure>
 								<img src="C:/Users/User/Documents/Git/Reservia/Reservia/photo3hebergement.jpg" alt="#" />
 								<figcaption>Hôtel les mouettes</figcaption>
@@ -115,7 +115,7 @@
 					</div>
 
 					<div id="Hebergement2">
-						<div id="Figure4">
+						<div class="photo">
 							<figure>
 								<img src="C:/Users/User/Documents/Git/Reservia/Reservia/photo4hebergement.jpg" alt="#" />
 								<figcaption>Hôtel de la mer</figcaption>
@@ -124,7 +124,7 @@
 							</figure>
 						</div>
 
-						<div id="Figure5">
+						<div class="photo">
 							<figure>
 								<img src="C:/Users/User/Documents/Git/Reservia/Reservia/photo5hebergement.jpg" alt="#" />
 								<figcaption>Auberge le panier</figcaption>
@@ -133,7 +133,7 @@
 							</figure>
 						</div>
 
-						<div id="Figure6">
+						<div class="photo">
 							<figure>
 								<img src="C:/Users/User/Documents/Git/Reservia/Reservia/photo6hebergement.jpg" alt="#" />
 								<figcaption>Hôtel chez Amina</figcaption>
@@ -149,7 +149,7 @@
 				<aside id="Aside">
 					<h2>Les Plus Populaires<i class="fas fa-chart-line"></i></h2>
 
-					<div id="Populaire1">
+					<div class="aside">
 						<figure>
 							<img src="C:/Users/User/Documents/Git/Reservia/Reservia/populaire1.jpg" alt="#" />
 							<figcaption>Hôtel le soleil du matin</figcaption>
@@ -158,7 +158,7 @@
 						</figure>
 					</div>
 
-					<div id="Populaire2">
+					<div class="aside">
 						<figure>
 							<img src="C:/Users/User/Documents/Git/Reservia/Reservia/populaire2.jpg" alt="#" />
 							<figcaption>Au coeur de l'eau Chambres d'hôtes</figcaption>
@@ -167,7 +167,7 @@
 						</figure>
 					</div>
 
-					<div id="Populaire3">
+					<div class="aside">
 						<figure>
 							<img src="C:/Users/User/Documents/Git/Reservia/Reservia/populaire3.jpg" alt="#" />
 							<figcaption>Hôtel Tout bleu et Blanc</figcaption>
