Essaye de metre aside et section en flex

--- a/Reservia.html
+++ b/Reservia.html
@@ -91,7 +91,7 @@
 								<img src="C:/Users/User/Documents/Git/Reservia/Reservia/photo1hebergement.jpg" alt="#" />
 								<figcaption>Auberge la Cannebière</figcaption>
 								<figcaption>Nuit à partir de 25€</figcaption>
-								<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+								<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i style="color: #cfcfcf" class="fas fa-star"></i>
 							</figure>
 						</div>
 
@@ -109,7 +109,7 @@
 								<img src="C:/Users/User/Documents/Git/Reservia/Reservia/photo3hebergement.jpg" alt="#" />
 								<figcaption>Hôtel les mouettes</figcaption>
 								<figcaption>Nuit à partir de 76€</figcaption>
-								<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+								<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i style="color: #cfcfcf" class="fas fa-star"></i>
 							</figure>
 						</div>
 					</div>
@@ -120,7 +120,7 @@
 								<img src="C:/Users/User/Documents/Git/Reservia/Reservia/photo4hebergement.jpg" alt="#" />
 								<figcaption>Hôtel de la mer</figcaption>
 								<figcaption>Nuit à partir de 46€</figcaption>
-								<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+								<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i style="color: #cfcfcf" class="fas fa-star"></i><i style="color: #cfcfcf" class="fas fa-star"></i>
 							</figure>
 						</div>
 
@@ -129,7 +129,7 @@
 								<img src="C:/Users/User/Documents/Git/Reservia/Reservia/photo5hebergement.jpg" alt="#" />
 								<figcaption>Auberge le panier</figcaption>
 								<figcaption>Nuit à partir de 23€</figcaption>
-								<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+								<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i style="color: #cfcfcf" class="fas fa-star"></i>
 							</figure>
 						</div>
 
@@ -150,29 +150,41 @@
 					<h2>Les Plus Populaires<i class="fas fa-chart-line"></i></h2>
 
 					<div class="aside">
-						<figure>
-							<img src="C:/Users/User/Documents/Git/Reservia/Reservia/populaire1.jpg" alt="#" />
-							<figcaption>Hôtel le soleil du matin</figcaption>
-							<figcaption>Nuit à partir de 128€</figcaption>
-							<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+						<figure class="flex">
+							<div>
+								<img src="C:/Users/User/Documents/Git/Reservia/Reservia/populaire1.jpg" alt="#" />
+							</div>
+							<div>
+								<figcaption>Hôtel le soleil du matin</figcaption>
+								<figcaption>Nuit à partir de 128€</figcaption>
+								<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+							</div>
 						</figure>
 					</div>
 
 					<div class="aside">
-						<figure>
-							<img src="C:/Users/User/Documents/Git/Reservia/Reservia/populaire2.jpg" alt="#" />
-							<figcaption>Au coeur de l'eau Chambres d'hôtes</figcaption>
-							<figcaption>Nuit à partir de 71€</figcaption>
-							<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+						<figure class="flex">
+							<div>
+								<img src="C:/Users/User/Documents/Git/Reservia/Reservia/populaire2.jpg" alt="#" />
+							</div>
+							<div>
+								<figcaption>Au coeur de l'eau Chambres d'hôtes</figcaption>
+								<figcaption>Nuit à partir de 71€</figcaption>
+								<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i style="color: #cfcfcf" class="fas fa-star"></i>
+							</div>
 						</figure>
 					</div>
 
 					<div class="aside">
-						<figure>
-							<img src="C:/Users/User/Documents/Git/Reservia/Reservia/populaire3.jpg" alt="#" />
-							<figcaption>Hôtel Tout bleu et Blanc</figcaption>
-							<figcaption>Nuit à partir de 68€</figcaption>
-							<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+						<figure class="flex">
+							<div>
+								<img src="C:/Users/User/Documents/Git/Reservia/Reservia/populaire3.jpg" alt="#" />
+							</div>
+							<div>
+								<figcaption>Hôtel Tout bleu et Blanc</figcaption>
+								<figcaption>Nuit à partir de 68€</figcaption>
+								<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i style="color: #cfcfcf" class="fas fa-star"></i>
+							</div>
 						</figure>
 					</div>
 				</aside>
