CSS mise en forme de Section2 et Aside

--- a/Reservia.html
+++ b/Reservia.html
@@ -147,7 +147,7 @@
 
 
 				<aside id="Aside">
-					<h2>Les Plus Populaires<i class="fas fa-chart-line"></i></h2>
+					<h2>Les Plus Populaires<i style="margin-left: 70px;" class="fas fa-chart-line"></i></h2>
 
 					<div class="aside">
 						<figure class="flex">
