--- a/Reservia.html
+++ b/Reservia.html
@@ -145,49 +145,50 @@
 					<p>Afficher plus</p>
 				</section>
 
+				
+					<aside id="Aside">
+						<h2>Les Plus Populaires<i style="margin-left: 60px;" class="fas fa-chart-line"></i></h2>
 
-				<aside id="Aside">
-					<h2>Les Plus Populaires<i style="margin-left: 70px;" class="fas fa-chart-line"></i></h2>
+						<div class="aside">
+							<figure class="flex">
+								<div>
+									<img src="C:/Users/User/Documents/Git/Reservia/Reservia/populaire1.jpg" alt="#" />
+								</div>
+								<div>
+									<figcaption>Hôtel le soleil du matin</figcaption>
+									<figcaption>Nuit à partir de 128€</figcaption>
+									<i style="margin-top: 45px;" class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+								</div>
+							</figure>
+						</div>
 
-					<div class="aside">
-						<figure class="flex">
-							<div>
-								<img src="C:/Users/User/Documents/Git/Reservia/Reservia/populaire1.jpg" alt="#" />
-							</div>
-							<div>
-								<figcaption>Hôtel le soleil du matin</figcaption>
-								<figcaption>Nuit à partir de 128€</figcaption>
-								<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
-							</div>
-						</figure>
-					</div>
+						<div class="aside">
+							<figure class="flex">
+								<div>
+									<img src="C:/Users/User/Documents/Git/Reservia/Reservia/populaire2.jpg" alt="#" />
+								</div>
+								<div>
+									<figcaption>Au coeur de l'eau Chambres d'hôtes</figcaption>
+									<figcaption>Nuit à partir de 71€</figcaption>
+									<i style="margin-top: 27px"; class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i style="color: #cfcfcf" class="fas fa-star"></i>
+								</div>
+							</figure>
+						</div>
 
-					<div class="aside">
-						<figure class="flex">
-							<div>
-								<img src="C:/Users/User/Documents/Git/Reservia/Reservia/populaire2.jpg" alt="#" />
-							</div>
-							<div>
-								<figcaption>Au coeur de l'eau Chambres d'hôtes</figcaption>
-								<figcaption>Nuit à partir de 71€</figcaption>
-								<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i style="color: #cfcfcf" class="fas fa-star"></i>
-							</div>
-						</figure>
-					</div>
-
-					<div class="aside">
-						<figure class="flex">
-							<div>
-								<img src="C:/Users/User/Documents/Git/Reservia/Reservia/populaire3.jpg" alt="#" />
-							</div>
-							<div>
-								<figcaption>Hôtel Tout bleu et Blanc</figcaption>
-								<figcaption>Nuit à partir de 68€</figcaption>
-								<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i style="color: #cfcfcf" class="fas fa-star"></i>
-							</div>
-						</figure>
-					</div>
-				</aside>
+						<div class="aside">
+							<figure class="flex">
+								<div>
+									<img src="C:/Users/User/Documents/Git/Reservia/Reservia/populaire3.jpg" alt="#" />
+								</div>
+								<div>
+									<figcaption>Hôtel Tout bleu et Blanc</figcaption>
+									<figcaption>Nuit à partir de 68€</figcaption>
+									<i style="margin-top: 45px;" class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i style="color: #cfcfcf" class="fas fa-star"></i>
+								</div>
+							</figure>
+						</div>
+					</aside>
+			
 
 
 				<section id="Section3">
