--- a/Reservia.html
+++ b/Reservia.html
@@ -189,47 +189,45 @@
 						</div>
 					</aside>
 			
-
-
 				<section id="Section3">
 					<h2>Activités à Marseille</h2>
 
-					<div id="Activité1">
+					<div id="Activite1">
 						<figure>
 							<img src="C:/Users/User/Documents/Git/Reservia/Reservia/activite1.jpg" alt="#" />
 							<figcaption>Vieux Port</figcaption>
 						</figure>
 					</div>
 
-					<div id="Activité2">
+					<div id="Activite2">
 						<figure>
 							<img src="C:/Users/User/Documents/Git/Reservia/Reservia/activite2.jpg" alt="#" />
 							<figcaption>Fort de Pornègues</figcaption>
 						</figure>
 					</div>
 
-					<div id="Activité3">
+					<div id="Activite3">
 						<figure>
 							<img src="C:/Users/User/Documents/Git/Reservia/Reservia/activite3.jpg" alt="#" />
 							<figcaption>Iles de Frioul</figcaption>
 						</figure>
 					</div>
 
-					<div id="Activité4">
+					<div id="Activite4">
 						<figure>
 							<img src="C:/Users/User/Documents/Git/Reservia/Reservia/activite4.jpg" alt="#" />
 							<figcaption>Parc National des Calanques</figcaption>
 						</figure>
 					</div>
 
-					<div id="Activité5">
+					<div id="Activite5">
 						<figure>
 							<img src="C:/Users/User/Documents/Git/Reservia/Reservia/activite5.jpg" alt="#" />
 							<figcaption>Notre-Dame-de-la-Garde</figcaption>
 						</figure>
 					</div>
 
-					<div id="Activité6">
+					<div id="Activite6">
 						<figure>
 							<img src="C:/Users/User/Documents/Git/Reservia/Reservia/activite6.jpg" alt="#" />
 							<figcaption>Parc Longchamp</figcaption>
