RESOLUTION PB Section3 en mettant le h2 a lextierieur du block

--- a/Reservia.html
+++ b/Reservia.html
@@ -189,49 +189,58 @@
 						</div>
 					</aside>
 			
-				<section id="Section3">
-					<h2>Activités à Marseille</h2>
 
-					<div id="Activite1">
+
+					<h2>Activités à Marseille</h2>
+					
+				<section id="Section3">
+					
+
+					<div class="Activite">
 						<figure>
 							<img src="C:/Users/User/Documents/Git/Reservia/Reservia/activite1.jpg" alt="#" />
 							<figcaption>Vieux Port</figcaption>
 						</figure>
 					</div>
 
-					<div id="Activite2">
-						<figure>
-							<img src="C:/Users/User/Documents/Git/Reservia/Reservia/activite2.jpg" alt="#" />
-							<figcaption>Fort de Pornègues</figcaption>
-						</figure>
+					<div id="colone1">
+						<div class="Activite">
+							<figure>
+								<img src="C:/Users/User/Documents/Git/Reservia/Reservia/activite2.jpg" alt="#" />
+								<figcaption>Fort de Pornègues</figcaption>
+							</figure>
+						</div>
+
+						<div class="Activite">
+							<figure>
+								<img src="C:/Users/User/Documents/Git/Reservia/Reservia/activite3.jpg" alt="#" />
+								<figcaption>Iles de Frioul</figcaption>
+							</figure>
+						</div>
 					</div>
 
-					<div id="Activite3">
-						<figure>
-							<img src="C:/Users/User/Documents/Git/Reservia/Reservia/activite3.jpg" alt="#" />
-							<figcaption>Iles de Frioul</figcaption>
-						</figure>
-					</div>
 
-					<div id="Activite4">
+					<div class="Activite">
 						<figure>
 							<img src="C:/Users/User/Documents/Git/Reservia/Reservia/activite4.jpg" alt="#" />
 							<figcaption>Parc National des Calanques</figcaption>
 						</figure>
 					</div>
 
-					<div id="Activite5">
-						<figure>
-							<img src="C:/Users/User/Documents/Git/Reservia/Reservia/activite5.jpg" alt="#" />
-							<figcaption>Notre-Dame-de-la-Garde</figcaption>
-						</figure>
-					</div>
+					<div id="colone2">
+						<div class="Activite">
+							<figure>
+								<img src="C:/Users/User/Documents/Git/Reservia/Reservia/activite5.jpg" alt="#" />
+								<figcaption>Notre-Dame-de-la-Garde</figcaption>
+							</figure>
+						</div>
 
-					<div id="Activite6">
-						<figure>
-							<img src="C:/Users/User/Documents/Git/Reservia/Reservia/activite6.jpg" alt="#" />
-							<figcaption>Parc Longchamp</figcaption>
-						</figure>
+						<div class="Activite">
+							<figure>
+								<img src="C:/Users/User/Documents/Git/Reservia/Reservia/activite6.jpg" alt="#" />
+								<figcaption>Parc Longchamp</figcaption>
+							</figure>
+						</div>
 					</div>
 				</section>
 			</main>
