RESOLUTION PB avec Clear:both

--- a/Reservia.html
+++ b/Reservia.html
@@ -190,55 +190,58 @@
 					</aside>
 				</section>
 			
-
-					<h2>Activités à Marseille</h2>
+					
 
 				<section id="Section3">
 
-					<div class="Activite">
-						<figure>
-							<img src="C:/Users/User/Documents/Git/Reservia/Reservia/activite1.jpg" alt="#" />
-							<figcaption>Vieux Port</figcaption>
-						</figure>
-					</div>
+					<h2>Activités à Marseille</h2>
 
-					<div id="colone1">
+					<div id="Conteneur">
 						<div class="Activite">
 							<figure>
-								<img src="C:/Users/User/Documents/Git/Reservia/Reservia/activite2.jpg" alt="#" />
-								<figcaption>Fort de Pornègues</figcaption>
+								<img src="C:/Users/User/Documents/Git/Reservia/Reservia/activite1.jpg" alt="#" />
+								<figcaption>Vieux Port</figcaption>
 							</figure>
 						</div>
 
-						<div style="margin-top: 23px;" class="Activite">
-							<figure>
-								<img src="C:/Users/User/Documents/Git/Reservia/Reservia/activite3.jpg" alt="#" />
-								<figcaption>Iles de Frioul</figcaption>
-							</figure>
+						<div id="colone1">
+							<div class="Activite">
+								<figure>
+									<img src="C:/Users/User/Documents/Git/Reservia/Reservia/activite2.jpg" alt="#" />
+									<figcaption>Fort de Pornègues</figcaption>
+								</figure>
+							</div>
+
+							<div style="margin-top: 23px;" class="Activite">
+								<figure>
+									<img src="C:/Users/User/Documents/Git/Reservia/Reservia/activite3.jpg" alt="#" />
+									<figcaption>Iles de Frioul</figcaption>
+								</figure>
+							</div>
 						</div>
-					</div>
 
 
-					<div class="Activite">
-						<figure>
-							<img src="C:/Users/User/Documents/Git/Reservia/Reservia/activite4.jpg" alt="#" />
-							<figcaption>Parc National des Calanques</figcaption>
-						</figure>
-					</div>
-
-					<div id="colone2">
 						<div class="Activite">
 							<figure>
-								<img src="C:/Users/User/Documents/Git/Reservia/Reservia/activite5.jpg" alt="#" />
-								<figcaption>Notre-Dame-de-la-Garde</figcaption>
+								<img src="C:/Users/User/Documents/Git/Reservia/Reservia/activite4.jpg" alt="#" />
+								<figcaption>Parc National des Calanques</figcaption>
 							</figure>
 						</div>
 
-						<div style="margin-top: 59.5px;" class="Activite">
-							<figure>
-								<img src="C:/Users/User/Documents/Git/Reservia/Reservia/activite6.jpg" alt="#" />
-								<figcaption>Parc Longchamp</figcaption>
-							</figure>
+						<div id="colone2">
+							<div class="Activite">
+								<figure>
+									<img src="C:/Users/User/Documents/Git/Reservia/Reservia/activite5.jpg" alt="#" />
+									<figcaption>Notre-Dame-de-la-Garde</figcaption>
+								</figure>
+							</div>
+
+							<div style="margin-top: 59.5px;" class="Activite">
+								<figure>
+									<img src="C:/Users/User/Documents/Git/Reservia/Reservia/activite6.jpg" alt="#" />
+									<figcaption>Parc Longchamp</figcaption>
+								</figure>
+							</div>
 						</div>
 					</div>
 				</section>
