--- a/Reservia.html
+++ b/Reservia.html
@@ -196,7 +196,7 @@
 
 					<h2>Activités à Marseille</h2>
 
-					<div id="Conteneur">
+					<div style="margin-left: -25px;" id="Conteneur">
 						<div class="Activite">
 							<figure>
 								<img src="C:/Users/User/Documents/Git/Reservia/Reservia/activite1.jpg" alt="#" />
