--- a/Reservia.html
+++ b/Reservia.html
@@ -157,7 +157,7 @@
 								<div>
 									<figcaption>Hôtel le soleil du matin</figcaption>
 									<figcaption>Nuit à partir de 128€</figcaption>
-									<i style="margin-top: 45px;" class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+									<i style="margin-top: 30px;" class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
 								</div>
 							</figure>
 						</div>
@@ -183,7 +183,7 @@
 								<div>
 									<figcaption>Hôtel Tout bleu et Blanc</figcaption>
 									<figcaption>Nuit à partir de 68€</figcaption>
-									<i style="margin-top: 45px;" class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i style="color: #cfcfcf" class="fas fa-star"></i>
+									<i style="margin-top: 30px;" class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i style="color: #cfcfcf" class="fas fa-star"></i>
 								</div>
 							</figure>
 						</div>
@@ -204,7 +204,7 @@
 							</figure>
 						</div>
 
-						<div id="colone1">
+						<div>
 							<div class="Activite">
 								<figure>
 									<img src="C:/Users/User/Documents/Git/Reservia/Reservia/activite2.jpg" alt="#" />
@@ -228,7 +228,7 @@
 							</figure>
 						</div>
 
-						<div id="colone2">
+						<div>
 							<div class="Activite">
 								<figure>
 									<img src="C:/Users/User/Documents/Git/Reservia/Reservia/activite5.jpg" alt="#" />
@@ -249,23 +249,25 @@
 
 
 			<footer>
-				<div id="A_propos">
-					<h3>A Propos</h3>
-					<p>Fontionnement du site</p>
-					<p>Conditions générale de ventes</p>
-					<p>Données et confidentialité</p>
-				</div>
+				<div id="footer">
+					<div id="A_propos">
+						<h3>A Propos</h3>
+						<p>Fontionnement du site</p>
+						<p>Conditions générale de ventes</p>
+						<p>Données et confidentialité</p>
+					</div>
 
-				<div id="Nos_Hebergements">
-					<h3>Nos Hebergements</h3>
-					<p>Charte qualité</p>
-					<p>Soumettre votre hôtel</p>
-				</div>
+					<div id="Nos_Hebergements">
+						<h3>Nos Hebergements</h3>
+						<p>Charte qualité</p>
+						<p>Soumettre votre hôtel</p>
+					</div>
 
-				<div id="Assistance">
-					<h3>Assistance</h3>
-					<p>Centre d'aide</p>
-					<p>Nous contacter</p>
+					<div id="Assistance">
+						<h3>Assistance</h3>
+						<p>Centre d'aide</p>
+						<p>Nous contacter</p>
+					</div>
 				</div>
 			</footer>
 		</div>
