--- a/Reservia.html
+++ b/Reservia.html
@@ -88,28 +88,28 @@
 					<div id="Hebergement1">
 						<div class="photo">
 							<figure>
-								<img src="C:/Users/User/Documents/Git/Reservia/Reservia/photo1hebergement.jpg" alt="#" />
+								<a href="#"><img src="C:/Users/User/Documents/Git/Reservia/Reservia/photo1hebergement.jpg" alt="#" />
 								<figcaption>Auberge la Cannebière</figcaption>
 								<figcaption>Nuit à partir de 25€</figcaption>
-								<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i style="color: #cfcfcf" class="fas fa-star"></i>
+								<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i style="color: #cfcfcf" class="fas fa-star"></i></a>
 							</figure>
 						</div>
 
 						<div class="photo">
 							<figure>
-								<img src="C:/Users/User/Documents/Git/Reservia/Reservia/photo2hebergement.jpg" alt="#" />
+								<a href="#"><img src="C:/Users/User/Documents/Git/Reservia/Reservia/photo2hebergement.jpg" alt="#" />
 								<figcaption>Hôtel du port</figcaption>
 								<figcaption>Nuit à partir de 52€</figcaption>
-								<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+								<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></a>
 							</figure>
 						</div>
 
 						<div class="photo">
 							<figure>
-								<img src="C:/Users/User/Documents/Git/Reservia/Reservia/photo3hebergement.jpg" alt="#" />
+								<a href="#"><img src="C:/Users/User/Documents/Git/Reservia/Reservia/photo3hebergement.jpg" alt="#" />
 								<figcaption>Hôtel les mouettes</figcaption>
 								<figcaption>Nuit à partir de 76€</figcaption>
-								<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i style="color: #cfcfcf" class="fas fa-star"></i>
+								<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i style="color: #cfcfcf" class="fas fa-star"></i></a>
 							</figure>
 						</div>
 					</div>
@@ -117,28 +117,28 @@
 					<div id="Hebergement2">
 						<div class="photo">
 							<figure>
-								<img src="C:/Users/User/Documents/Git/Reservia/Reservia/photo4hebergement.jpg" alt="#" />
+								<a href="#"><img src="C:/Users/User/Documents/Git/Reservia/Reservia/photo4hebergement.jpg" alt="#" />
 								<figcaption>Hôtel de la mer</figcaption>
 								<figcaption>Nuit à partir de 46€</figcaption>
-								<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i style="color: #cfcfcf" class="fas fa-star"></i><i style="color: #cfcfcf" class="fas fa-star"></i>
+								<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i style="color: #cfcfcf" class="fas fa-star"></i><i style="color: #cfcfcf" class="fas fa-star"></i></a>
 							</figure>
 						</div>
 
 						<div class="photo">
 							<figure>
-								<img src="C:/Users/User/Documents/Git/Reservia/Reservia/photo5hebergement.jpg" alt="#" />
+								<a href="#"><img src="C:/Users/User/Documents/Git/Reservia/Reservia/photo5hebergement.jpg" alt="#" />
 								<figcaption>Auberge le panier</figcaption>
 								<figcaption>Nuit à partir de 23€</figcaption>
-								<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i style="color: #cfcfcf" class="fas fa-star"></i>
+								<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i style="color: #cfcfcf" class="fas fa-star"></i></a>
 							</figure>
 						</div>
 
 						<div class="photo">
 							<figure>
-								<img src="C:/Users/User/Documents/Git/Reservia/Reservia/photo6hebergement.jpg" alt="#" />
+								<a href="#"><img src="C:/Users/User/Documents/Git/Reservia/Reservia/photo6hebergement.jpg" alt="#" />
 								<figcaption>Hôtel chez Amina</figcaption>
 								<figcaption>Nuit à partir de 96€</figcaption>
-								<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+								<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></a>
 							</figure>
 						</div>
 					</div>
@@ -152,12 +152,12 @@
 						<div class="aside">
 							<figure class="flex">
 								<div>
-									<img src="C:/Users/User/Documents/Git/Reservia/Reservia/populaire1.jpg" alt="#" />
+									<a href="#"><img src="C:/Users/User/Documents/Git/Reservia/Reservia/populaire1.jpg" alt="#" /></a>
 								</div>
 								<div>
-									<figcaption>Hôtel le soleil du matin</figcaption>
+									<a href="#"><figcaption>Hôtel le soleil du matin</figcaption>
 									<figcaption>Nuit à partir de 128€</figcaption>
-									<i style="margin-top: 30px;" class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+									<i style="margin-top: 30px;" class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></a>
 								</div>
 							</figure>
 						</div>
@@ -165,12 +165,12 @@
 						<div class="aside">
 							<figure class="flex">
 								<div>
-									<img src="C:/Users/User/Documents/Git/Reservia/Reservia/populaire2.jpg" alt="#" />
+									<a href="#"><img src="C:/Users/User/Documents/Git/Reservia/Reservia/populaire2.jpg" alt="#" /></a>
 								</div>
 								<div>
-									<figcaption>Au coeur de l'eau Chambres d'hôtes</figcaption>
+									<a href="#"><figcaption>Au coeur de l'eau Chambres d'hôtes</figcaption>
 									<figcaption>Nuit à partir de 71€</figcaption>
-									<i style="margin-top: 27px"; class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i style="color: #cfcfcf" class="fas fa-star"></i>
+									<i style="margin-top: 27px"; class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i style="color: #cfcfcf" class="fas fa-star"></i></a>
 								</div>
 							</figure>
 						</div>
@@ -178,12 +178,12 @@
 						<div class="aside">
 							<figure class="flex">
 								<div>
-									<img src="C:/Users/User/Documents/Git/Reservia/Reservia/populaire3.jpg" alt="#" />
+									<a href="#"><img src="C:/Users/User/Documents/Git/Reservia/Reservia/populaire3.jpg" alt="#" /></a>
 								</div>
 								<div>
-									<figcaption>Hôtel Tout bleu et Blanc</figcaption>
+									<a href="#"><figcaption>Hôtel Tout bleu et Blanc</figcaption>
 									<figcaption>Nuit à partir de 68€</figcaption>
-									<i style="margin-top: 30px;" class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i style="color: #cfcfcf" class="fas fa-star"></i>
+									<i style="margin-top: 30px;" class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i style="color: #cfcfcf" class="fas fa-star"></i></a>
 								</div>
 							</figure>
 						</div>
@@ -199,23 +199,23 @@
 					<div style="margin-left: -25px;" id="Conteneur">
 						<div class="Activite">
 							<figure>
-								<img src="C:/Users/User/Documents/Git/Reservia/Reservia/activite1.jpg" alt="#" />
-								<figcaption>Vieux Port</figcaption>
+								<a href="#"><img src="C:/Users/User/Documents/Git/Reservia/Reservia/activite1.jpg" alt="#" />
+								<figcaption>Vieux Port</figcaption></a>
 							</figure>
 						</div>
 
 						<div>
 							<div class="Activite">
 								<figure>
-									<img src="C:/Users/User/Documents/Git/Reservia/Reservia/activite2.jpg" alt="#" />
-									<figcaption>Fort de Pornègues</figcaption>
+									<a href="#"><img src="C:/Users/User/Documents/Git/Reservia/Reservia/activite2.jpg" alt="#" />
+									<figcaption>Fort de Pornègues</figcaption></a>
 								</figure>
 							</div>
 
 							<div style="margin-top: 23px;" class="Activite">
 								<figure>
-									<img src="C:/Users/User/Documents/Git/Reservia/Reservia/activite3.jpg" alt="#" />
-									<figcaption>Iles de Frioul</figcaption>
+									<a href="#"><img src="C:/Users/User/Documents/Git/Reservia/Reservia/activite3.jpg" alt="#" />
+									<figcaption>Iles de Frioul</figcaption></a>
 								</figure>
 							</div>
 						</div>
@@ -223,23 +223,23 @@
 
 						<div class="Activite">
 							<figure>
-								<img src="C:/Users/User/Documents/Git/Reservia/Reservia/activite4.jpg" alt="#" />
-								<figcaption>Parc National des Calanques</figcaption>
+								<a href="#"><img src="C:/Users/User/Documents/Git/Reservia/Reservia/activite4.jpg" alt="#" />
+								<figcaption>Parc National des Calanques</figcaption></a>
 							</figure>
 						</div>
 
 						<div>
 							<div class="Activite">
 								<figure>
-									<img src="C:/Users/User/Documents/Git/Reservia/Reservia/activite5.jpg" alt="#" />
-									<figcaption>Notre-Dame-de-la-Garde</figcaption>
+									<a href="#"><img src="C:/Users/User/Documents/Git/Reservia/Reservia/activite5.jpg" alt="#" />
+									<figcaption>Notre-Dame-de-la-Garde</figcaption></a>
 								</figure>
 							</div>
 
 							<div style="margin-top: 59.5px;" class="Activite">
 								<figure>
-									<img src="C:/Users/User/Documents/Git/Reservia/Reservia/activite6.jpg" alt="#" />
-									<figcaption>Parc Longchamp</figcaption>
+									<a href="#"><img src="C:/Users/User/Documents/Git/Reservia/Reservia/activite6.jpg" alt="#" />
+									<figcaption>Parc Longchamp</figcaption></a>
 								</figure>
 							</div>
 						</div>
