--- a/Reservia.html
+++ b/Reservia.html
@@ -19,8 +19,8 @@
 				<div id="Naviguation">
 					<nav>
 						<ul>
-							<li><a href="#">Hébergements</a></li>
-							<li><a href="#">Activités</a></li>
+							<li><a href="#Section2">Hébergements</a></li>
+							<li><a href="#Section3">Activités</a></li>
 							<li><a href="#">S'inscrire</a></li>
 						</ul>
 					</nav>
@@ -189,12 +189,11 @@
 						</div>
 					</aside>
 				</section>
-			
 					
 
 				<section id="Section3">
 
-					<h2>Activités à Marseille</h2>
+						<h2>Activités à Marseille</h2>
 
 					<div style="margin-left: -25px;" id="Conteneur">
 						<div class="Activite">
