W3C norme 30erreur corriger figure/a/figcaption/i/

--- a/Reservia.html
+++ b/Reservia.html
@@ -87,59 +87,47 @@
 
 					<div id="Hebergement1">
 						<div class="photo">
-							<figure>
-								<a href="#"><img src="C:/Users/User/Documents/Git/Reservia/Reservia/photo1hebergement.jpg" alt="#" />
-								<figcaption>Auberge la Cannebière</figcaption>
-								<figcaption>Nuit à partir de 25€</figcaption>
-								<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i style="color: #cfcfcf" class="fas fa-star"></i></a>
-							</figure>
+							<a href="#"><figure>
+								<img src="C:/Users/User/Documents/Git/Reservia/Reservia/photo1hebergement.jpg" alt="#" />
+								<figcaption>Auberge la Cannebière<br />Nuit à partir de 25€<br /><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i style="color: #cfcfcf" class="fas fa-star"></i></figcaption>
+							</figure></a>
 						</div>
 
 						<div class="photo">
-							<figure>
-								<a href="#"><img src="C:/Users/User/Documents/Git/Reservia/Reservia/photo2hebergement.jpg" alt="#" />
-								<figcaption>Hôtel du port</figcaption>
-								<figcaption>Nuit à partir de 52€</figcaption>
-								<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></a>
-							</figure>
+							<a href="#"><figure>
+								<img src="C:/Users/User/Documents/Git/Reservia/Reservia/photo2hebergement.jpg" alt="#" />
+								<figcaption>Hôtel du port<br />Nuit à partir de 52€<br /><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></figcaption>
+							</figure></a>
 						</div>
 
 						<div class="photo">
-							<figure>
-								<a href="#"><img src="C:/Users/User/Documents/Git/Reservia/Reservia/photo3hebergement.jpg" alt="#" />
-								<figcaption>Hôtel les mouettes</figcaption>
-								<figcaption>Nuit à partir de 76€</figcaption>
-								<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i style="color: #cfcfcf" class="fas fa-star"></i></a>
-							</figure>
+							<a href="#"><figure>
+								<img src="C:/Users/User/Documents/Git/Reservia/Reservia/photo3hebergement.jpg" alt="#" />
+								<figcaption>Hôtel les mouettes<br />Nuit à partir de 76€<br /><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i style="color: #cfcfcf" class="fas fa-star"></i></figcaption>
+							</figure></a>
 						</div>
 					</div>
 
 					<div id="Hebergement2">
 						<div class="photo">
-							<figure>
-								<a href="#"><img src="C:/Users/User/Documents/Git/Reservia/Reservia/photo4hebergement.jpg" alt="#" />
-								<figcaption>Hôtel de la mer</figcaption>
-								<figcaption>Nuit à partir de 46€</figcaption>
-								<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i style="color: #cfcfcf" class="fas fa-star"></i><i style="color: #cfcfcf" class="fas fa-star"></i></a>
-							</figure>
+							<a href="#"><figure>
+								<img src="C:/Users/User/Documents/Git/Reservia/Reservia/photo4hebergement.jpg" alt="#" />
+								<figcaption>Hôtel de la mer<br />Nuit à partir de 46€<br /><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i style="color: #cfcfcf" class="fas fa-star"></i><i style="color: #cfcfcf" class="fas fa-star"></i></figcaption>
+							</figure></a>
 						</div>
 
 						<div class="photo">
-							<figure>
-								<a href="#"><img src="C:/Users/User/Documents/Git/Reservia/Reservia/photo5hebergement.jpg" alt="#" />
-								<figcaption>Auberge le panier</figcaption>
-								<figcaption>Nuit à partir de 23€</figcaption>
-								<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i style="color: #cfcfcf" class="fas fa-star"></i></a>
-							</figure>
+							<a href="#"><figure>
+								<img src="C:/Users/User/Documents/Git/Reservia/Reservia/photo5hebergement.jpg" alt="#" />
+								<figcaption>Auberge le panier<br />Nuit à partir de 23€<br /><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i style="color: #cfcfcf" class="fas fa-star"></i></figcaption>
+							</figure></a>
 						</div>
 
 						<div class="photo">
-							<figure>
-								<a href="#"><img src="C:/Users/User/Documents/Git/Reservia/Reservia/photo6hebergement.jpg" alt="#" />
-								<figcaption>Hôtel chez Amina</figcaption>
-								<figcaption>Nuit à partir de 96€</figcaption>
-								<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></a>
-							</figure>
+							<a href="#"><figure>
+								<img src="C:/Users/User/Documents/Git/Reservia/Reservia/photo6hebergement.jpg" alt="#" />
+								<figcaption>Hôtel chez Amina<br />Nuit à partir de 96€<br /><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></figcaption>
+							</figure></a>
 						</div>
 					</div>
 					<p>Afficher plus</p>
@@ -150,42 +138,36 @@
 						<h2>Les Plus Populaires<i style="margin-left: 60px;" class="fas fa-chart-line"></i></h2>
 
 						<div class="aside">
-							<figure class="flex">
+							<a href="#"><figure class="flex">
 								<div>
-									<a href="#"><img src="C:/Users/User/Documents/Git/Reservia/Reservia/populaire1.jpg" alt="#" /></a>
+									<img src="C:/Users/User/Documents/Git/Reservia/Reservia/populaire1.jpg" alt="#" />
 								</div>
 								<div>
-									<a href="#"><figcaption>Hôtel le soleil du matin</figcaption>
-									<figcaption>Nuit à partir de 128€</figcaption>
-									<i style="margin-top: 30px;" class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></a>
+									<figcaption>Hôtel le soleil du matin<br />Nuit à partir de 128€<br /><i style="margin-top: 30px;" class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></figcaption>
 								</div>
-							</figure>
+							</figure></a>
 						</div>
 
 						<div class="aside">
-							<figure class="flex">
+							<a href="#"><figure class="flex">
 								<div>
-									<a href="#"><img src="C:/Users/User/Documents/Git/Reservia/Reservia/populaire2.jpg" alt="#" /></a>
+									<img src="C:/Users/User/Documents/Git/Reservia/Reservia/populaire2.jpg" alt="#" />
 								</div>
 								<div>
-									<a href="#"><figcaption>Au coeur de l'eau Chambres d'hôtes</figcaption>
-									<figcaption>Nuit à partir de 71€</figcaption>
-									<i style="margin-top: 27px"; class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i style="color: #cfcfcf" class="fas fa-star"></i></a>
+									<figcaption>Au coeur de l'eau Chambres d'hôtes<br />Nuit à partir de 71€<br /><i style="margin-top: 27px"; class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i style="color: #cfcfcf" class="fas fa-star"></i></figcaption>
 								</div>
-							</figure>
+							</figure></a>
 						</div>
 
 						<div class="aside">
-							<figure class="flex">
+							<a href="#"><figure class="flex">
 								<div>
-									<a href="#"><img src="C:/Users/User/Documents/Git/Reservia/Reservia/populaire3.jpg" alt="#" /></a>
+									<img src="C:/Users/User/Documents/Git/Reservia/Reservia/populaire3.jpg" alt="#" />
 								</div>
 								<div>
-									<a href="#"><figcaption>Hôtel Tout bleu et Blanc</figcaption>
-									<figcaption>Nuit à partir de 68€</figcaption>
-									<i style="margin-top: 30px;" class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i style="color: #cfcfcf" class="fas fa-star"></i></a>
+									<figcaption>Hôtel Tout bleu et Blanc<br />Nuit à partir de 68€<br /><i style="margin-top: 30px;" class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i style="color: #cfcfcf" class="fas fa-star"></i></figcaption>
 								</div>
-							</figure>
+							</figure></a>
 						</div>
 					</aside>
 				</section>
@@ -197,49 +179,49 @@
 
 					<div style="margin-left: -25px;" id="Conteneur">
 						<div class="Activite">
-							<figure>
-								<a href="#"><img src="C:/Users/User/Documents/Git/Reservia/Reservia/activite1.jpg" alt="#" />
-								<figcaption>Vieux Port</figcaption></a>
-							</figure>
+							<a href="#"><figure>
+								<img src="C:/Users/User/Documents/Git/Reservia/Reservia/activite1.jpg" alt="#" />
+								<figcaption>Vieux Port</figcaption>
+							</figure></a>
 						</div>
 
 						<div>
 							<div class="Activite">
-								<figure>
-									<a href="#"><img src="C:/Users/User/Documents/Git/Reservia/Reservia/activite2.jpg" alt="#" />
-									<figcaption>Fort de Pornègues</figcaption></a>
-								</figure>
+								<a href="#"><figure>
+									<img src="C:/Users/User/Documents/Git/Reservia/Reservia/activite2.jpg" alt="#" />
+									<figcaption>Fort de Pornègues</figcaption>
+								</figure></a>
 							</div>
 
 							<div style="margin-top: 23px;" class="Activite">
-								<figure>
-									<a href="#"><img src="C:/Users/User/Documents/Git/Reservia/Reservia/activite3.jpg" alt="#" />
-									<figcaption>Iles de Frioul</figcaption></a>
-								</figure>
+								<a href="#"><figure>
+									<img src="C:/Users/User/Documents/Git/Reservia/Reservia/activite3.jpg" alt="#" />
+									<figcaption>Iles de Frioul</figcaption>
+								</figure></a>
 							</div>
 						</div>
 
 
 						<div class="Activite">
-							<figure>
-								<a href="#"><img src="C:/Users/User/Documents/Git/Reservia/Reservia/activite4.jpg" alt="#" />
-								<figcaption>Parc National des Calanques</figcaption></a>
-							</figure>
+							<a href="#"><figure>
+								<img src="C:/Users/User/Documents/Git/Reservia/Reservia/activite4.jpg" alt="#" />
+								<figcaption>Parc National des Calanques</figcaption>
+							</figure></a>
 						</div>
 
 						<div>
 							<div class="Activite">
-								<figure>
-									<a href="#"><img src="C:/Users/User/Documents/Git/Reservia/Reservia/activite5.jpg" alt="#" />
-									<figcaption>Notre-Dame-de-la-Garde</figcaption></a>
-								</figure>
+								<a href="#"><figure>
+									<img src="C:/Users/User/Documents/Git/Reservia/Reservia/activite5.jpg" alt="#" />
+									<figcaption>Notre-Dame-de-la-Garde</figcaption>
+								</figure></a>
 							</div>
 
 							<div style="margin-top: 59.5px;" class="Activite">
-								<figure>
-									<a href="#"><img src="C:/Users/User/Documents/Git/Reservia/Reservia/activite6.jpg" alt="#" />
-									<figcaption>Parc Longchamp</figcaption></a>
-								</figure>
+								<a href="#"><figure>
+									<img src="C:/Users/User/Documents/Git/Reservia/Reservia/activite6.jpg" alt="#" />
+									<figcaption>Parc Longchamp</figcaption>
+								</figure></a>
 							</div>
 						</div>
 					</div>
