0 Erreurs sur W3C en HTML

--- a/Reservia.html
+++ b/Reservia.html
@@ -133,45 +133,30 @@
 					<p>Afficher plus</p>
 				</section>
 
-				<section>
 					<aside id="Aside">
 						<h2>Les Plus Populaires<i style="margin-left: 60px;" class="fas fa-chart-line"></i></h2>
 
 						<div class="aside">
 							<a href="#"><figure class="flex">
-								<div>
 									<img src="C:/Users/User/Documents/Git/Reservia/Reservia/populaire1.jpg" alt="#" />
-								</div>
-								<div>
 									<figcaption>Hôtel le soleil du matin<br />Nuit à partir de 128€<br /><i style="margin-top: 30px;" class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></figcaption>
-								</div>
 							</figure></a>
 						</div>
 
 						<div class="aside">
 							<a href="#"><figure class="flex">
-								<div>
 									<img src="C:/Users/User/Documents/Git/Reservia/Reservia/populaire2.jpg" alt="#" />
-								</div>
-								<div>
-									<figcaption>Au coeur de l'eau Chambres d'hôtes<br />Nuit à partir de 71€<br /><i style="margin-top: 27px"; class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i style="color: #cfcfcf" class="fas fa-star"></i></figcaption>
-								</div>
+									<figcaption>Au coeur de l'eau Chambres d'hôtes<br />Nuit à partir de 71€<br /><i style="margin-top: 27px;" class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i style="color: #cfcfcf" class="fas fa-star"></i></figcaption>
 							</figure></a>
 						</div>
 
 						<div class="aside">
 							<a href="#"><figure class="flex">
-								<div>
 									<img src="C:/Users/User/Documents/Git/Reservia/Reservia/populaire3.jpg" alt="#" />
-								</div>
-								<div>
 									<figcaption>Hôtel Tout bleu et Blanc<br />Nuit à partir de 68€<br /><i style="margin-top: 30px;" class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i style="color: #cfcfcf" class="fas fa-star"></i></figcaption>
-								</div>
 							</figure></a>
 						</div>
 					</aside>
-				</section>
-					
 
 				<section id="Section3">
 
