--- a/Reservia.html
+++ b/Reservia.html
@@ -4,6 +4,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<link rel="stylesheet" href="style.css"/>
+		<link rel="stylesheet" media="all and (max-width: 580px)" href="stylemobile.css" />
 		<script src="https://kit.fontawesome.com/89272632ee.js" crossorigin="anonymous"></script>
 		<title>Reservia</title>
 	</head>
