--- a/Reservia.html
+++ b/Reservia.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<link rel="stylesheet" href="style.css"/>
-		<link rel="stylesheet" media="all and (max-width: 580px)" href="stylemobile.css" />
+		<link rel="stylesheet" media="all and (max-width: 520px)" href="stylemobile.css" />
 		<script src="https://kit.fontawesome.com/89272632ee.js" crossorigin="anonymous"></script>
 		<title>Reservia</title>
 	</head>
@@ -20,9 +20,9 @@
 				<div id="Naviguation">
 					<nav>
 						<ul>
-							<li><a href="#Section2">Hébergements</a></li>
+							<li><a href="#Section2" style="color: #0065FC;">Hébergements</a></li>
 							<li><a href="#Section3">Activités</a></li>
-							<li><a href="#">S'inscrire</a></li>
+							<li><a href="#" style="color: #0065FC;">S'inscrire</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -87,21 +87,21 @@
 						<div class="photo">
 							<a href="#"><figure>
 								<img src="C:/Users/User/Documents/Git/Reservia/Reservia/photo1hebergement.jpg" alt="#" />
-								<figcaption>Auberge la Cannebière<br />Nuit à partir de 25€<br /><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i style="color: #cfcfcf" class="fas fa-star"></i></figcaption>
+								<figcaption><span class="span">Auberge la Cannebière</span><br /><span class="span2">Nuit à partir de 25€</span><br /><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i style="color: #cfcfcf" class="fas fa-star"></i></figcaption>
 							</figure></a>
 						</div>
 
 						<div class="photo">
 							<a href="#"><figure>
 								<img src="C:/Users/User/Documents/Git/Reservia/Reservia/photo2hebergement.jpg" alt="#" />
-								<figcaption>Hôtel du port<br />Nuit à partir de 52€<br /><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></figcaption>
+								<figcaption><span class="span">Hôtel du port</span><br /><span class="span2">Nuit à partir de 52€</span><br /><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></figcaption>
 							</figure></a>
 						</div>
 
 						<div class="photo">
 							<a href="#"><figure>
 								<img src="C:/Users/User/Documents/Git/Reservia/Reservia/photo3hebergement.jpg" alt="#" />
-								<figcaption>Hôtel les mouettes<br />Nuit à partir de 76€<br /><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i style="color: #cfcfcf" class="fas fa-star"></i></figcaption>
+								<figcaption><span class="span">Hôtel les mouettes</span><br /><span class="span2">Nuit à partir de 76€</span><br /><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i style="color: #cfcfcf" class="fas fa-star"></i></figcaption>
 							</figure></a>
 						</div>
 					</div>
@@ -110,21 +110,21 @@
 						<div class="photo">
 							<a href="#"><figure>
 								<img src="C:/Users/User/Documents/Git/Reservia/Reservia/photo4hebergement.jpg" alt="#" />
-								<figcaption>Hôtel de la mer<br />Nuit à partir de 46€<br /><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i style="color: #cfcfcf" class="fas fa-star"></i><i style="color: #cfcfcf" class="fas fa-star"></i></figcaption>
+								<figcaption><span class="span">Hôtel de la mer</span><br /><span class="span2">Nuit à partir de 46€</span><br /><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i style="color: #cfcfcf" class="fas fa-star"></i><i style="color: #cfcfcf" class="fas fa-star"></i></figcaption>
 							</figure></a>
 						</div>
 
 						<div class="photo">
 							<a href="#"><figure>
 								<img src="C:/Users/User/Documents/Git/Reservia/Reservia/photo5hebergement.jpg" alt="#" />
-								<figcaption>Auberge le panier<br />Nuit à partir de 23€<br /><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i style="color: #cfcfcf" class="fas fa-star"></i></figcaption>
+								<figcaption><span class="span">Auberge le panier</span><br /><span class="span2">Nuit à partir de 23€</span><br /><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i style="color: #cfcfcf" class="fas fa-star"></i></figcaption>
 							</figure></a>
 						</div>
 
 						<div class="photo">
 							<a href="#"><figure>
 								<img src="C:/Users/User/Documents/Git/Reservia/Reservia/photo6hebergement.jpg" alt="#" />
-								<figcaption>Hôtel chez Amina<br />Nuit à partir de 96€<br /><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></figcaption>
+								<figcaption><span class="span">Hôtel chez Amina</span><br /><span class="span2">Nuit à partir de 96€</span><br /><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></figcaption>
 							</figure></a>
 						</div>
 					</div>
@@ -132,26 +132,26 @@
 				</section>
 
 					<aside id="Aside">
-						<h2>Les Plus Populaires<i style="margin-left: 60px;" class="fas fa-chart-line"></i></h2>
+						<h2>Les plus populaires<i style="margin-left: 60px;" class="fas fa-chart-line"></i></h2>
 
 						<div class="aside">
 							<a href="#"><figure class="flex">
 									<img src="C:/Users/User/Documents/Git/Reservia/Reservia/populaire1.jpg" alt="#" />
-									<figcaption>Hôtel le soleil du matin<br />Nuit à partir de 128€<br /><i style="margin-top: 30px;" class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></figcaption>
+									<figcaption><span class="span">Hôtel le soleil du matin</span><br /><span class="span2">Nuit à partir de 128€</span><br /><i style="margin-top: 30px;" class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></figcaption>
 							</figure></a>
 						</div>
 
 						<div class="aside">
 							<a href="#"><figure class="flex">
 									<img src="C:/Users/User/Documents/Git/Reservia/Reservia/populaire2.jpg" alt="#" />
-									<figcaption>Au coeur de l'eau Chambres d'hôtes<br />Nuit à partir de 71€<br /><i style="margin-top: 27px;" class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i style="color: #cfcfcf" class="fas fa-star"></i></figcaption>
+									<figcaption><span class="span">Au coeur de l'eau Chambres d'hôtes</span><br /><span class="span2">Nuit à partir de 71€</span><br /><i style="margin-top: 27px;" class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i style="color: #cfcfcf" class="fas fa-star"></i></figcaption>
 							</figure></a>
 						</div>
 
 						<div class="aside">
 							<a href="#"><figure class="flex">
 									<img src="C:/Users/User/Documents/Git/Reservia/Reservia/populaire3.jpg" alt="#" />
-									<figcaption>Hôtel Tout bleu et Blanc<br />Nuit à partir de 68€<br /><i style="margin-top: 30px;" class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i style="color: #cfcfcf" class="fas fa-star"></i></figcaption>
+									<figcaption><span class="span">Hôtel Tout bleu et Blanc</span><br /><span class="span2">Nuit à partir de 68€</span><br /><i style="margin-top: 30px;" class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i style="color: #cfcfcf" class="fas fa-star"></i></figcaption>
 							</figure></a>
 						</div>
 					</aside>
@@ -163,7 +163,7 @@
 						<div class="Activite">
 							<a href="#"><figure>
 								<img src="C:/Users/User/Documents/Git/Reservia/Reservia/activite1.jpg" alt="#" />
-								<figcaption>Vieux Port</figcaption>
+								<figcaption><span class="span">Vieux Port</span></figcaption>
 							</figure></a>
 						</div>
 
@@ -171,14 +171,14 @@
 							<div class="Activite">
 								<a href="#"><figure>
 									<img src="C:/Users/User/Documents/Git/Reservia/Reservia/activite2.jpg" alt="#" />
-									<figcaption>Fort de Pornègues</figcaption>
+									<figcaption><span class="span">Fort de Pornègues</span></figcaption>
 								</figure></a>
 							</div>
 
 							<div style="margin-top: 23px;" class="Activite">
 								<a href="#"><figure>
 									<img src="C:/Users/User/Documents/Git/Reservia/Reservia/activite3.jpg" alt="#" />
-									<figcaption>Iles de Frioul</figcaption>
+									<figcaption><span class="span">Iles de Frioul</span></figcaption>
 								</figure></a>
 							</div>
 						</div>
@@ -186,7 +186,7 @@
 						<div class="Activite">
 							<a href="#"><figure>
 								<img src="C:/Users/User/Documents/Git/Reservia/Reservia/activite4.jpg" alt="#" />
-								<figcaption>Parc National des Calanques</figcaption>
+								<figcaption><span class="span">Parc National des Calanques</span></figcaption>
 							</figure></a>
 						</div>
 
@@ -194,14 +194,14 @@
 							<div class="Activite">
 								<a href="#"><figure>
 									<img src="C:/Users/User/Documents/Git/Reservia/Reservia/activite5.jpg" alt="#" />
-									<figcaption>Notre-Dame-de-la-Garde</figcaption>
+									<figcaption><span class="span">Notre-Dame-de-la-Garde</span></figcaption>
 								</figure></a>
 							</div>
 
 							<div style="margin-top: 59.5px;" class="Activite">
 								<a href="#"><figure>
 									<img src="C:/Users/User/Documents/Git/Reservia/Reservia/activite6.jpg" alt="#" />
-									<figcaption>Parc Longchamp</figcaption>
+									<figcaption><span class="span">Parc Longchamp</span></figcaption>
 								</figure></a>
 							</div>
 						</div>
@@ -212,14 +212,14 @@
 			<footer>
 				<div id="footer">
 					<div id="A_propos">
-						<h3>A Propos</h3>
+						<h3>A propos</h3>
 						<p>Fontionnement du site</p>
 						<p>Conditions générale de ventes</p>
 						<p>Données et confidentialité</p>
 					</div>
 
 					<div id="Nos_Hebergements">
-						<h3>Nos Hebergements</h3>
+						<h3>Nos hebergements</h3>
 						<p>Charte qualité</p>
 						<p>Soumettre votre hôtel</p>
 					</div>
