--- a/Reservia.html
+++ b/Reservia.html
@@ -3,8 +3,8 @@
 <html lang="fr">
 	<head>
 		<meta charset="utf-8" />
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 		<link rel="stylesheet" href="style.css"/>
-		<link rel="stylesheet" media="all and (max-width: 500px)" href="stylemobile.css" />
 		<script src="https://kit.fontawesome.com/89272632ee.js" crossorigin="anonymous"></script>
 		<title>Reservia</title>
 	</head>
@@ -137,21 +137,21 @@
 						<div class="aside">
 							<a href="#"><figure class="flex">
 									<img src="C:/Users/User/Documents/Git/Reservia/Reservia/populaire1.jpg" alt="#" />
-									<figcaption><span class="span">Hôtel le soleil du matin</span><br /><span class="span2">Nuit à partir de 128€</span><br /><i style="margin-top: 30px;" class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></figcaption>
+									<figcaption><span class="span">Hôtel le soleil du matin</span><br /><span class="span2">Nuit à partir de 128€</span><br /><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></figcaption>
 							</figure></a>
 						</div>
 
 						<div class="aside">
 							<a href="#"><figure class="flex">
 									<img src="C:/Users/User/Documents/Git/Reservia/Reservia/populaire2.jpg" alt="#" />
-									<figcaption><span class="span">Au coeur de l'eau Chambres d'hôtes</span><br /><span class="span2">Nuit à partir de 71€</span><br /><i style="margin-top: 27px;" class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i style="color: #cfcfcf" class="fas fa-star"></i></figcaption>
+									<figcaption><span class="span">Au coeur de l'eau Chambres d'hôtes</span><br /><span class="span2">Nuit à partir de 71€</span><br /><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i style="color: #cfcfcf" class="fas fa-star"></i></figcaption>
 							</figure></a>
 						</div>
 
 						<div class="aside">
 							<a href="#"><figure class="flex">
 									<img src="C:/Users/User/Documents/Git/Reservia/Reservia/populaire3.jpg" alt="#" />
-									<figcaption><span class="span">Hôtel Tout bleu et Blanc</span><br /><span class="span2">Nuit à partir de 68€</span><br /><i style="margin-top: 30px;" class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i style="color: #cfcfcf" class="fas fa-star"></i></figcaption>
+									<figcaption><span class="span">Hôtel Tout bleu et Blanc</span><br /><span class="span2">Nuit à partir de 68€</span><br /><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i style="color: #cfcfcf" class="fas fa-star"></i></figcaption>
 							</figure></a>
 						</div>
 					</aside>
@@ -232,5 +232,6 @@
 				</div>
 			</footer>
 		</div>
+		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 	</body>
 </html>
