footer responsiv fini

--- a/Reservia.html
+++ b/Reservia.html
@@ -5,6 +5,7 @@
 		<meta charset="utf-8" />
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 		<link rel="stylesheet" href="style.css"/>
+		<link rel="stylesheet" media="screen and (max-width: 576px)" href="stylemobile.css" />
 		<script src="https://kit.fontawesome.com/89272632ee.js" crossorigin="anonymous"></script>
 		<title>Reservia</title>
 	</head>
@@ -211,12 +212,10 @@
 					</section>
 				</main>
 
-				
-
 				<footer>
 					<div id="footer">
 						<div class="row">
-     						<div class="col-12 col-lg-4">
+     						<div class="col-12 col-sm-4">
 								<div id="A_propos">
 									<h3>A propos</h3>
 									<p>Fontionnement du site</p>
@@ -225,7 +224,7 @@
 								</div>
 							</div>
 
-     						<div class="col-12 col-lg-4">
+     						<div class="col-12 col-sm-4">
 								<div id="Nos_Hebergements">
 									<h3>Nos hebergements</h3>
 									<p>Charte qualité</p>
@@ -233,7 +232,7 @@
 								</div>
 							</div>
 
-							<div class="col-12 col-lg-4">
+							<div class="col-12 col-sm-4">
 								<div id="Assistance">
 									<h3>Assistance</h3>
 									<p>Centre d'aide</p>
