--- a/Reservia.html
+++ b/Reservia.html
@@ -5,7 +5,7 @@
 		<meta charset="utf-8" />
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 		<link rel="stylesheet" href="style.css"/>
-		<link rel="stylesheet" media="screen and (max-width: 576px)" href="stylemobile.css" />
+		<link rel="stylesheet" media="all and (max-width: 576px)" href="stylemobile.css" />
 		<script src="https://kit.fontawesome.com/89272632ee.js" crossorigin="anonymous"></script>
 		<title>Reservia</title>
 	</head>
